BAP-1588: Remove unexpected sort order icons from grids header - fixed bug with excessive sort triangle icons - applied multiple sorting to columns (one column always must be sorted) - fixed "jumping" behaviour of header block on collection reload

--- a/Bundle/GridBundle/Resources/public/css/oro.grid.css
+++ b/Bundle/GridBundle/Resources/public/css/oro.grid.css
@@ -3,19 +3,17 @@ table.grid thead th > span {
     text-transform: uppercase;
 }
 
-table.grid thead th {
-  span.caret {
-    /*display: none;
-    border: none;*/
+table.grid thead th span.caret {
+    display: none;
+    border: none;
     border-right: 4px solid transparent;
     border-left: 4px solid transparent;
-  }
 }
 .grid thead .btn-group .btn .caret {
-  margin-top:11px;
+    margin-top:11px;
 }
 table.grid thead tr th.ascending span.caret {
-  margin-top:4px;
+    margin-top:4px;
     display: inline-block;
     border-top:4px solid transparent;
     border-bottom: 4px solid #000000;
